fix the picture too large problem

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -13,7 +13,6 @@ body {
   grid-gap: 20px;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   background-color: transparent;
-
 }
 
 /* Header */
@@ -81,6 +80,13 @@ header {
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
   position: relative;
   border: 1px solid lightgrey;
+  display: grid;
+  place-items: center;
+}
+
+.box img {
+  max-width: 100%;
+  max-height: 250px;
 }
 
 .box div {
